# VideoPlayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zhangzd/video/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegCore.cpp  FFmpegCore.h  OpenSL_ES_Core.cpp  OpenSL_ES_Core.h  demux_decode.cpp  log.h  native-lib.cpp  native-lib.h
app/src/main/java/com/zhangzd/video/: MainActivity.java  StringUtils.java  VideoApplication.java
app/src/main/jni/: Android.mk  native-lib.c  native-lib.cpp  native-lib.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zhangzd/video/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
